--- a/index.html
+++ b/index.html
@@ -1056,7 +1056,7 @@ Dandenong Road, Chadstone VIC 3148, Australia</span></a> </li>
             <div class="copyright-footer">
                 <div class="pt-3 pb-0">
                     <div class="row flex-row-reverse justify-content-between">
-                        <div class="col-lg-12 col-md-12 text-lg-center text-md-center text-center"> <span class="copyright">Copyright © 2020 <a href="http://xoomdigital.com.au" class="tran3s p-color">Xoom Digital</a></span> </div>
+                        <div class="col-lg-12 col-md-12 text-lg-center text-md-center text-center"> <span class="copyright">Copyright © Xoomdigital | All  class="tran3s p-color"></span> </div>
                     </div>
                 </div>
             </div>
@@ -1095,7 +1095,7 @@ Dandenong Road, Chadstone VIC 3148, Australia</span></a> </li>
 </footer>
     <!-- Footer End-->
     <!--footer bottom copyright start-->
-   <span class="copyright">Copyright © Xoomdigital | All RightReserved</span>
+ 
     <!--footer bottom copyright end-->
     <!--footer section end-->
     <!--scroll bottom to top button start-->
