--- a/index.html
+++ b/index.html
@@ -1056,7 +1056,7 @@ Dandenong Road, Chadstone VIC 3148, Australia</span></a> </li>
             <div class="copyright-footer">
                 <div class="pt-3 pb-0">
                     <div class="row flex-row-reverse justify-content-between">
-                        <div class="col-lg-12 col-md-12 text-lg-center text-md-center text-center"> <span class="copyright">Copyright © Xoomdigital | All  class="tran3s p-color"></span> </div>
+                        <div class="col-lg-12 col-md-12 text-lg-center text-md-center text-center"> <span class="copyright">Copyright © Xoomdigital | All Right Reserved </span> </div>
                     </div>
                 </div>
             </div>
